Make code JDK6 compliant.