@@ -37,10 +37,10 @@
     </scm>
 
     <properties>
+        <project.build.targetJdk>1.6</project.build.targetJdk>
         <skip.it>false</skip.it>
         <dep.maven-api.version>3.0</dep.maven-api.version>
         <dep.plexus.version>1.5.5</dep.plexus.version>
-        <dep.kitei-lessio.version>2.0</dep.kitei-lessio.version>
         <dep.kitei-rules.version>2</dep.kitei-rules.version>
         <dep.plugin.plugin.version>3.2</dep.plugin.plugin.version>
         <dep.plugin.surefire.version>2.17</dep.plugin.surefire.version>
@@ -155,9 +155,9 @@
         </dependency>
 
         <dependency>
-          <groupId>org.codehaus.plexus</groupId>
-          <artifactId>plexus-interpolation</artifactId>
-          <version>1.19</version>
+            <groupId>org.codehaus.plexus</groupId>
+            <artifactId>plexus-interpolation</artifactId>
+            <version>1.19</version>
         </dependency>
 
         <dependency>
@@ -201,13 +201,6 @@
         <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.kitei.testing</groupId>
-            <artifactId>kitei-lessio</artifactId>
-            <version>${dep.kitei-lessio.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -277,25 +270,6 @@
                         <rulesets>
                             <ruleset>pmd/kitei.xml</ruleset>
                         </rulesets>
-                    </configuration>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.kitei.testing</groupId>
-                            <artifactId>kitei-lessio</artifactId>
-                            <version>${dep.kitei-lessio.version}</version>
-                        </dependency>
-                    </dependencies>
-                    <configuration>
-                        <argLine>
-                            ${argLine}
-                            -Djava.security.manager=org.kitei.testing.lessio.LessIOSecurityManager
-                            -Dfile.encoding=${project.build.sourceEncoding}
-                        </argLine>
                     </configuration>
                 </plugin>
             </plugins>
@@ -530,4 +504,33 @@
             </plugin>
         </plugins>
     </reporting>
+
+    <profiles>
+        <profile>
+            <id>cross-compile</id>
+            <activation>
+                <jdk>(1.6,]</jdk>
+            </activation>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <configuration>
+                                <compilerArguments children.combine="append">
+                                    <bootclasspath>${project.jdk6.home}/jre/lib/rt.jar:${project.jdk6.home}/jre/lib/jce.jar:${project.jdk6.home}/../classes/classes.jar</bootclasspath>
+                                </compilerArguments>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <artifactId>maven-javadoc-plugin</artifactId>
+                            <configuration>
+                                <bootclasspath>${project.jdk6.home}/jre/lib/rt.jar:${project.jdk6.home}/jre/lib/jce.jar:${project.jdk6.home}/../classes/classes.jar</bootclasspath>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
+    </profiles>
 </project>
